--- a/static/style/master.css
+++ b/static/style/master.css
@@ -7191,6 +7191,19 @@ h6 {
   font-size: 25px;
   border-radius: 4px;
 }
+
+.portfolio-box-01 .portfolio-info .gh-link {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: #fff;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 45px;
+  font-size: 25px;
+  border-radius: 4px;
+}
 .portfolio-box-01:hover .portfolio-info {
   opacity: 1;
 }
